# ska-mid-jupyter-notebooks

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  PrivateRules.mk  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: scan.json
data/csp/: assign_resources.json  scan.json
data/scheduling_block/: adr-99-sb-test.json  mid_5_point_sb.json  mid_5_point_sb_2.json  mid_general_sb.json  params_insert.json  psi-adr-99-sb-oso.json  psi-adr-99-sb.json  scheduling_block.json
data/sdp/: scan.json
docs/src/: conf.py  index.rst
notebooks/auto-correlation/: auto-correlation.ipynb
notebooks/basic-health/: configure_system_for_scan_commissioning_test.ipynb  control_and_monitoring_commissioning_test.ipynb  rf-chain_and_channelisation.ipynb  rf-chain_and_channelisation_comm_test.ipynb  rf-chain_and_channelisation_test_equipment.ipynb  system_health_displays.ipynb
notebooks/calibration/: 5_point_calibration_no_oso_lmc.ipynb  5_point_calibration_no_oso_no_lmc.ipynb  5_point_calibration_no_oso_with_bite.ipynb  5_point_calibration_no_oso_with_spfrx.ipynb  5_point_calibration_oso.ipynb  5_point_calibration_oso_with_bite.ipynb  5_point_calibration_oso_with_spfrx.ipynb
notebooks/channelisation_and_linearity/: channelisation_performance_verification_test.ipynb  rf-chain_and_linearity_comm_test.ipynb  rf_chain_and_linearity_comm_test.ipynb
notebooks/deployment_history/: history.ipynb
notebooks/diagnostics/: 4_cbf_diagnosis.ipynb  cbf_diagnosis.ipynb  histogram_client.py  sequence_diagrams.ipynb  signal_chain_checks.py  statecount_histogram_collection.ipynb  statecount_histogram_collection.py  test_config.yaml
notebooks/mcs/: mcs_setup.ipynb
notebooks/mid_consolidated/: basic_health_v2.ipynb  e2e_tmc_itf_v2.ipynb  system_health.ipynb
notebooks/mid_e2e/: bite_generation.ipynb  e2e_4_receptor.ipynb  e2e_csp_sdp.ipynb  e2e_no_tmc.ipynb  e2e_no_tmc_bite.ipynb  e2e_tmc.ipynb  e2e_tmc_bite.ipynb  e2e_tmc_csp_only.ipynb  e2e_tmc_itf.ipynb  e2e_tmc_leafs.ipynb  e2e_tmc_lmc_psi.ipynb  e2e_tmc_multiscan.ipynb  e2e_tmc_psi.ipynb  e2e_tmc_psi_multiscan.ipynb  e2e_tmc_psi_multiscan_unhappy.ipynb  e2e_tmc_psi_multiscan_unhappy_config.ipynb  itf_configure_test_equipment.ipynb
notebooks/mid_new/: basic_health_v2.ipynb  mid_new.ipynb  (+2 more)
(+174 files in other folders)
