[tool.poetry]
name = "ska-mid-jupyter-notebooks"
version = "0.1.0"
description = ""
authors = ["ATLAS", "MAPLE"]
license = "BSD"
readme = "README.md"
repository = "https://gitlab.com/ska-telescope/ska-mid-jupyter-notebooks"
packages = [
    {include = "ska_mid_jupyter_notebooks", from = "src"}
]
include = [
    { path = 'tests' }
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ipywidgets = "^8.1.2"
notebook = "^6.4.12"
jupyterlab = "^3.4.7"
ska-tmc-cdm = "^9.2.1"
ska-oso-scripting = "^8.0.0"
ska-oso-pdm = "^12.0.1"
ska-sdp-cbf-emulator = "^8.0.0"
ska-ser-config-inspector-client = "^0.2.2"
kubernetes = "^21.7.0"
bokeh = "^3.3.0"
jupyter-bokeh = "^3.0.7"
jupyterhub = "^4.0.2"
jupyter-events = "<0.10"
fastjsonschema = "^2.19.1"
jupyterlab-server = "2.24.0"
build = "0.10.0"
ska-ser-logging = "^0.4.3"
schema = "0.7.5"
ska-control-model = "^0.3.4"
nbformat = "^5.10.4"
mypy-extensions = "^1.0.0"
pathspec = "^0.12.1"
jupyter-server = "2.10.0"
pydantic-core = "^2.18.2"
annotated-types = "^0.6.0"

[tool.poetry.extras]
localtango = ["pytango"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.3.0"
pylint = "^3.1.0"
pytest-cov = "^5.0.0"
pytest-json-report = "^1.5.0"
pycodestyle = "^2.11.1"
pylint-junit = "^0.3.4"
nbmake = "^1.5.3"
nbqa = "^1.8.5"
fastjsonschema = "^2.19.1"
python-build = "^0.2.13"
assertpy = "^1.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
ska-ser-sphinx-theme = "^0.1.2"
myst-parser = "^2.0.0"
recommonmark = "^0.7.1"

[tool.poetry.scripts]
convertnb = "src.ska_mid_jupyter_notebooks.scripts.convert_nb:main"

[tool.coverage.run]
parallel = true
branch = true
data_file = ".coverage/.coverage"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'ska'
url = 'https://artefact.skao.int/repository/pypi-all/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'
